--- a/map_editor/main.css
+++ b/map_editor/main.css
@@ -30,6 +30,9 @@ input[type="number"] {
     width: 2em;
     text-align: right;
 }
+#end input {
+    width: 8em;
+}
 #lights {
     width: 60em;
     margin: 0 0.5em;
