--- a/game/data/css/main.css
+++ b/game/data/css/main.css
@@ -11,6 +11,7 @@ body {
 	width: 80%;
 	text-align: center;
 	font-size: 1em;
+	line-height: 1.5em;
 	padding: 1em;
 	border-bottom-left-radius: 1em;
 	border-bottom-right-radius: 1em;
