Mobile mode added.

--- a/game/data/css/main.css
+++ b/game/data/css/main.css
@@ -33,3 +33,61 @@ body {
 	margin: auto;
 	background: #000;
 }
+
+#keys {
+	font-size: 34px;
+	color: #000;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	opacity: 0.7;
+	user-select: none;
+		-moz-user-select: none;
+		-webkit-user-select: none;
+}
+
+.key {
+	text-align: center;
+	line-height: 1em;
+	width: 1em;
+	height: 1em;
+	background: rgba(255,255,255,0.7);
+	padding: 0.5em;
+	border: 1px solid white;
+	position: absolute;
+}
+
+#key_up {
+	left: 70px;
+	bottom: 70px;
+}
+
+#key_left {
+	left: 0;
+	bottom: 0;
+}
+
+#key_down {
+	left: 70px;
+	bottom: 0;
+}
+
+#key_right {
+	left: 140px;
+	bottom: 0;
+}
+
+#key_enter {
+	right: 140px;
+	bottom: 0;
+}
+
+#key_pause {
+	right: 70px;
+	bottom: 0;
+}
+
+#key_space {
+	right: 0;
+	bottom: 0;
+}
