Fixed several bugs. Main texts are ready to translate.

--- a/game/data/css/main.css
+++ b/game/data/css/main.css
@@ -15,6 +15,7 @@ body {
 	padding: 1em;
 	border-bottom-left-radius: 1em;
 	border-bottom-right-radius: 1em;
+	background: rgb(64,64,64);
 	background: rgba(64,64,64,0.8);
 }
 
