Embed Noto Serif font.

--- a/src/data/css/main.css
+++ b/src/data/css/main.css
@@ -1,9 +1,16 @@
+@font-face {
+	font-family: "Noto Serif";
+	font-style: normal;
+	font-weight: 400;
+	src: url(noto_serif.woff);
+}
+
 body {
 	margin: 0;
 	background: #000;
 	color: #fff;
 	overflow: hidden;
-	font: "sans-serif";
+	font-family: "Noto Serif", "sans-serif";
 }
 a, a:visited {
 	color: #00d2ff;
